@@ -6,6 +6,7 @@ void AddSC_zone_nagrand_groupquests();
 void AddSC_zone_netherstorm_groupquests();
 void AddSC_zone_shadowmoon_valley_groupquests();
 void AddSC_zone_sholazar_basin_groupquests();
+void AddSC_tirisfal_glades_groupquests();
 void AddSC_zone_zuldrak_groupquests();
 
 void AddSC_go_scripts_groupquests();
@@ -23,6 +24,7 @@ void Addmod_groupquestsScripts()
     AddSC_zone_netherstorm_groupquests();
     AddSC_zone_shadowmoon_valley_groupquests();
     AddSC_zone_sholazar_basin_groupquests();
+    AddSC_tirisfal_glades_groupquests();
     AddSC_zone_zuldrak_groupquests();
 
     AddSC_go_scripts_groupquests();
